- fixed: module could not be installed due to a bug in the create table statement (Invalid default
value for 'res_x') and a parse error in admin_header

- changed: Changed all mysql_ function calls to their proper DataBase class functions, query() for 

SELECT and queryF() for INSERT, UPDATE and DELETE queries

git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/flashgames/trunk@5381 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
-31-09-2008
+05-10-2008
+- fixed: module could not be installed due to a bug in the create table statement (Invalid default value for 'res_x') and a parse error in admin_header
+
+- changed: Changed all mysql_ function calls to their proper DataBase class functions, query() for SELECT and queryF() for INSERT, UPDATE and DELETE queries
+
+
+30-09-2008
 
 - added: patched game.php to address SQLInjection Vulnerability in lid parameter.
 
